# intel-MKL-wrapper-for-CORR-CONV

./: CMakeLists.txt  LICENSE  README.md
include/: intel_mkl_conv.h  intel_mkl_corr.h
src/: intel_mkl_conv.cpp  intel_mkl_corr.cpp  test_conv_2d.cpp  test_corr_2d.cpp
